resgate-route.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: resgate
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8000
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: resgate
spec:
  hosts:
  - "*"
  gateways:
  - resgate
  http:
  - route:
    - destination:
        host: resgate
        port:
          number: 80
